# regex

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: nfa.hpp  parser.hpp  regex.hpp
src/: nfa.cpp  parser.cpp  regex.cpp
tests/: CMakeLists.txt
